@@ -456,12 +456,12 @@ test(149, dt[J(2:3),roll=TRUE], data.table(a=c(2L,3L),b=c(1L,1L),key="a"))  # in
 # 150:158 test out of order factor levels in key columns (now allowed from v1.8.0)
 dt = data.table(x=factor(c("c","b","a"),levels=c("b","a","c")),y=1:3)
 setkey(dt,x)
-test(150.1, dt["b",y], warning="Coercing character column i.'V1' to factor")
-test(150.2, suppressWarnings(dt["b",y])$y, 2L)
+test(150.1, dt["b",y,verbose=TRUE], output="Coercing character column i.'V1' to factor")
+test(150.2, dt["b",y]$y, 2L)
 # from Tom's post :
 a = data.table(a=rep(1:5, 2), b=factor(letters[rep(1:5, each =2)], levels=letters[5:1]), key="b")
-test(151.1, a[J("b"),a], warning="Coercing character column i.'V1' to factor")
-test(151.2, suppressWarnings(a[J("b"),a])$a, 3:4)
+test(151.1, a[J("b"),a,verbose=TRUE], output="Coercing character column i.'V1' to factor")
+test(151.2, a[J("b"),a]$a, 3:4)
 # stretch tests further, two out of order levels, one gets key'd the other not :
 a = data.table(x=factor(letters[rep(1:5, each =2)], levels=letters[5:1]),
                y=factor(letters[rep(c(6,9,7,10,8), each =2)], levels=letters[10:6]),
@@ -1601,8 +1601,8 @@ test(546, DT[,sum(v),by=month(date)], data.table(month=2:3,V1=c(11L,15L)))
 x = factor(LETTERS[1:3], levels=rev(LETTERS), ordered=TRUE)
 DT = data.table(A=x,B=x,v=1:3, key="A")
 test(547,is.ordered(DT$A) && is.ordered(DT$B))
-test(548.1, DT["A",v], warning="Coercing character column i.'V1' to factor to match type of x.'A'")
-test(548.2, suppressWarnings(DT["A",v])$v,1L)
+test(548.1, DT["A",v,verbose=TRUE], output="Coercing character column i.'V1' to factor to match type of x.'A'")
+test(548.2, DT["A",v]$v,1L)
 # Posted by Damian Betebenner ...
 set.seed(123)
 my.course.sample = sample(1:5, 10, replace=TRUE)
@@ -1674,8 +1674,8 @@ test(577, CJ(x=c(1L,2L), c("a","b")), data.table(x=c(1L,1L,2L,2L),V2=c("a","b","
 # Test factor to character join when factor contains unused and reverse order levels :
 X = data.table(a=LETTERS[1:4],v=1:4,key="a")
 Y = data.table(a=factor(c("D","B"),levels=rev(LETTERS)),key="a")
-test(578, X[Y], warning="Coercing factor column i.'a' to character to match type of x.'a'")
-test(579, suppressWarnings(X[Y]), data.table(a=c("D","B"), v=c(4L,2L)))
+test(578, X[Y,verbose=TRUE], output="Coercing factor column i.'a' to character to match type of x.'a'")
+test(579, X[Y], data.table(a=c("D","B"), v=c(4L,2L)))
 
 # Test that logical i in set() returns helpful error
 DT = data.table(a=1:3,b=4:6)
